[package]
name = "ambur-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
cosmwasm-std = "2.2.2"
philabs-cw721-marketplace = { path = "./packages/philabs-cw721-marketplace", features = ["library"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["transport-streamable-http-server", "transport-worker"] }
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

# cw721 tokens
ambur-wl-token = { path = "./packages/ambur-whitelist-ticket/contracts/token", features = ["library"] }
archies-token = { git = "https://github.com/phi-labs-ltd/archies-token.git", version = "0.1.0", features = ["library"] }
derpies-token = { path = "./packages/derpies-minter/contracts/token", features = ["library"] }
ghouls-token = { git = "https://github.com/phi-labs-ltd/ghouls-token.git", version = "0.1.0", features = ["library"] }

# cw721 minters
ambur-wl-minter = { path = "./packages/ambur-whitelist-ticket/contracts/minter", features = ["library"] }
derpies-minter = { path = "./packages/derpies-minter/contracts/minter", features = ["library"] }
ghouls-minter = { path = "./packages/ghouls-minter", features = ["library"] }
whitelist-minter = { path = "./packages/archies-whitelist-minter", features = ["library"] }