[package]
name = "ambur-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
cosmwasm-std = "2.2.2"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["transport-streamable-http-server", "transport-worker"] }
philabs-cw721-marketplace = { git = "ssh://git@github.com/phi-labs-ltd/philabs-cw721-marketplace.git", version = "2.1.1", features = ["library"] }
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

# cw721 tokens
ambur-wl-token = { git = "ssh://git@github.com/phi-labs-ltd/ambur-whitelist-ticket.git", version = "0.1.1" }
archies-token = { git = "https://github.com/phi-labs-ltd/archies-token.git", version = "0.1.0", features = ["library"] }
derpies-token = { git = "ssh://git@github.com/phi-labs-ltd/derpies-minter.git", version = "0.1.0", features = ["library"] }
ghouls-token = { git = "https://github.com/phi-labs-ltd/ghouls-token.git", version = "0.1.0", features = ["library"] }

# cw721 minters
ambur-wl-minter = { git = "ssh://git@github.com/phi-labs-ltd/ambur-whitelist-ticket.git", version = "1.1.3", features = ["library"] }
derpies-minter = { git = "ssh://git@github.com/phi-labs-ltd/derpies-minter.git", version = "1.1.3", features = ["library"] }
ghouls-minter = { git = "ssh://git@github.com/phi-labs-ltd/ghouls-minter.git", version = "0.2.6", features = ["library"] }
whitelist-minter = { git = "ssh://git@github.com/phi-labs-ltd/archies-whitelist-minter.git", version = "1.0.1", features = ["library"] }